# djangorestframework_versioning

./: .coveragerc  .gitignore  LICENSE  README.md  manage.py  mkdocs.yml  pyproject.toml  release.py  requirements.txt  setup.cfg  versions.json  versions.py
2.0.5/: 404.html  index.html  objects.inv  search.html  sitemap.xml
2.0.5/how-to-guides/how-to-foo/: index.html
2.0.5/how-to-guides/how-to-guides/: index.html
2.0.5/quickstart/: index.html
2.0.5/reference/: index.html
2.0.5/search/: search_index.json
2.0.5/tutorials/installation/: index.html
2.0.5/tutorials/sample-django-project/: index.html
2.0.5/tutorials/serializers/: index.html
2.0.5/tutorials/views/: index.html
2.1.0/: index.html  search.html
2.1.0/how-to-guides/how-to-guides/: index.html
2.1.0/reference/: index.html
djangorestframework_versioning/: asgi.py  settings.py  urls.py  wsgi.py
docs/: README.md  quickstart.md  reference.md
docs/tutorials/: installation.md  sample-django-project.md  serializers.md  views.md
drf_versioning/: __init__.py  apps.py  decorators.py  exceptions.py  middleware.py  settings.py  urls.py  views.py
drf_versioning/decorators/: __init__.py  decorators.py  utils.py
drf_versioning/serializers/: __init__.py  base.py  utils.py  versioned_serializer.py
drf_versioning/transform/: __init__.py  base.py  common.py  serializers.py
drf_versioning/transforms/: __init__.py  base.py  common.py  serializers.py  transform.py
drf_versioning/version/: base.py  serializers.py
drf_versioning/versions/: __init__.py  base.py  serializers.py  views.py
drf_versioning/views/: __init__.py  versioned_viewset.py
latest/: search.html
latest/how-to-guides/how-to-foo/: index.html
latest/how-to-guides/how-to-guides/: index.html
latest/quickstart/: index.html
latest/reference/: index.html
latest/tutorials/installation/: index.html
latest/tutorials/sample-django-project/: index.html
latest/tutorials/serializers/: index.html
latest/tutorials/views/: index.html
rest_framework_versioning/: apps.py  exceptions.py  middleware.py  models.py  views.py
rest_framework_versioning/transform/: base.py  common.py  serializers.py
rest_framework_versioning/version/: __init__.py  base.py  serializers.py
rest_framework_versioning/version/tests/: test_base.py
src/drf_versioning/: apps.py  middleware.py  urls.py  views.py
src/drf_versioning/transform/: base.py  serializers.py
src/drf_versioning/version/: base.py
src/drf_versioning/version/tests/: test_base.py
tests/: models.py  serializers.py  test_sanity.py  test_settings.py  test_views.py  transforms.py  urls.py  versions.py  views.py
tests/migrations/: 0001_initial.py  0002_thing_number.py  0003_thing_status.py  0004_thing_date_updated.py  0005_alter_thing_date_updated.py  0006_person.py  0007_alter_person_father_alter_person_mother.py  0008_alter_person_birthday.py
tests/tests/: conftest.py  test_conftest.py  test_decorators.py  test_middleware.py  test_serializers.py  test_settings.py  test_transforms.py  test_version.py  test_versioning_serializer.py  test_views.py
