[metadata]
name = djangorestframework_versioning
version = 0.0.5
author = Robin Neville
author_email = robin.m.neville@gmail.com
description = Versioning tools for use with Django Rest Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/binnev/djangorestframework_versioning
project_urls =
    Bug Tracker = https://github.com/binnev/djangorestframework_versioning/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
exclude =
	tests
	.*tests
	tests.*
