[metadata]
name = djangorestframework_versioning
version = 0.0.7
author = Robin Neville
author_email = robin.m.neville@gmail.com
description = Versioning tools for use with Django Rest Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/binnev/djangorestframework_versioning
project_urls =
    Bug Tracker = https://github.com/binnev/djangorestframework_versioning/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    django >=3.2
    djangorestframework >=3.13.1
    typing >=3.7.4.3
    packaging >=3.0.9
[options.packages.find]
include =
    drf_versioning*